# csc452

./: phase1starter.tgz
Phase 0/: CMakeLists.txt  phase0  phase0.c  phase0.d
Phase 0/usloss/: config.mk  config.status
Phase 0/usloss/libdisk/: makedisk
Phase 0/usloss/pterm/: pterm
Phase 1/: CMakeLists.txt
Phase 1/phase1a/: phase1a.c  phase1a.d
Phase 1/phase1a/tests/: test_one_context  test_one_context.d  test_phase0_code  test_phase0_code.c  test_phase0_code.d  test_phase0_code_free  test_phase0_code_free.c  test_phase0_code_free.d  test_phase0_code_free.out  test_phase0_code_user  test_phase0_code_user.c  test_phase0_code_user.d  test_phase0_code_user.out
Phase 1/phase1b/: phase1b.c  phase1b.d
Phase 1/phase1b/tests/: test_init_info.c
Phase 1/phase1c/: phase1c.c  phase1c.d
Phase 1/phase1c/tests/: test_gs_cars.c  test_multiple_sems.c  test_p_v.c
Phase 1/phase1d/: phase1d.c  phase1d.d
Phase 1/phase1d/tests/: test_device_clock  test_device_clock.d  test_device_clock.out  test_join  test_join.d  test_join.out  test_join_grand.c  test_sem  test_sem.d  test_sem.out  test_startup  test_startup.d  test_startup.out
Phase 1/usloss/: config.status
Phase 1/usloss/libdisk/: makedisk
Phase 1/usloss/pterm/: pterm
Phase 2/phase2a/: phase2a.c  phase2a.d
Phase 2/phase2a/tests/: test_basic  test_basic.d  test_multiple_processes.c  test_spawn.c
Phase 2/phase2b/: phase2b.c
Phase 2/phase2b/tests/: test_ten_sleep.c  test_varying_sleep.c
Phase 2/phase2c/: Makefile  phase2c.c
Phase 2/phase2c/tests/: test_simple.c
Phase 2/phase2d/: phase2d.c
Phase 2/phase2d/tests/: test_sem.c
Phase 2/usloss/: config.status
Phase 2/usloss/libdisk/: makedisk
Phase 2/usloss/libuser/: Makefile
Phase 2/usloss/pterm/: pterm
Phase 3/: .gitignore  CMakeLists.txt  phase3.h
Phase 3/phase3a/: phase3a.c  phase3a.d
Phase 3/phase3a/tests/: test_basic  test_basic.c  test_basic.d
Phase 3/phase3b/: phase3b.c  phase3b.d
Phase 3/phase3b/tests/: test_basic  test_basic.c  test_basic.d
Phase 3/phase3c/: phase3c.c  phase3c.d
Phase 3/phase3c/tests/: test_basic  test_basic.c  test_basic.d  test_map  test_map.d  test_out_of_swap  test_out_of_swap.d
Phase 3/phase3d/: phase3d.c  phase3d.d
Phase 3/phase3d/tests/: test_basic  test_basic.c  test_basic.d
lib/usloss/libdisk/: makedisk
lib/usloss/pterm/: pterm
lib/usloss/src/tests/: clock  context0  context1  interrupt  mmu  mmu2  mmu3  mmu4  psr  psr1  psr2  syscall  syscall2  termread  termwrite  termwritebig
usloss/libdisk/: makedisk
usloss/pterm/: pterm
usloss/src/tests/: minimal.c
usloss/src/tests/minimal.dSYM/Contents/Resources/DWARF/: minimal
