cmake_minimum_required(VERSION 3.13)
project(Phase_0)

set(CMAKE_CXX_STANDARD 14)

include_directories("/Users/kyle/Desktop/CSC 452/usloss/src")

add_executable(Phase_0
    cmake-build-debug/cmake_install.cmake
    cmake-build-debug/CMakeCache.txt
    cmake-build-debug/Makefile
    cmake-build-debug/Phase_0.cbp
    CMakeLists.txt
    CS452_Fall_2019_Phase_0.pdf
    Makefile
    phase0
    phase0.c
    phase0.d
    phase0.o
    README.md
    term0.out
    term1.out
    term2.out
    term3.out)
