cmake_minimum_required(VERSION 3.15)
project(Phase_1)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(cmake-build-debug)
include_directories(p3)
include_directories(phase1a)
include_directories(phase1a/tests)
include_directories(phase1b)
include_directories(phase1b/tests)
include_directories(phase1c)
include_directories(phase1c/tests)
include_directories(phase1d)
include_directories(phase1d/tests)
include_directories(usloss)
include_directories(usloss/libdisk)
include_directories(usloss/libuser)
include_directories(usloss/pterm)
include_directories(usloss/src)
include_directories(usloss/src/tests)

add_executable(Phase_1
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/Phase_1.cbp
        p3/p3stubs.c
        p3/p3stubs.o
        p3/p3stubsTest.c
        phase1a/tests/test_one_context.c
        phase1a/tests/test_one_context.d
        phase1a/tests/test_phase0_code.c
        phase1a/tests/test_phase0_code.d
        phase1a/tests/test_phase0_code_free.c
        phase1a/tests/test_phase0_code_free.d
        phase1a/tests/test_phase0_code_user.c
        phase1a/tests/test_phase0_code_user.d
        phase1a/Makefile
        phase1a/phase1a.c
        phase1a/phase1a.d
        phase1b/tests/test_fork.c
        phase1b/tests/test_fork.o
        phase1b/tests/test_init_info.c
        phase1b/libphase1a-1.0.a
        phase1b/libphase1b-1.0.a
        phase1b/Makefile
        phase1b/phase1b.c
        phase1b/phase1b.d
        phase1b/phase1b.o
        phase1c/tests/test_multiple_sems.c
        phase1c/tests/test_p_v.c
        phase1c/tests/test_v_p.c
        phase1c/Makefile
        phase1c/phase1c.c
        phase1d/tests/test_device_clock.c
        phase1d/tests/test_join.c
        phase1d/tests/test_sem.c
        phase1d/tests/test_startup.c
        phase1d/CMakeLists.txt
        phase1d/Makefile
        phase1d/phase1d.c
        usloss/libdisk/disk.c
        usloss/libdisk/disk.o
        usloss/libdisk/libdisk.h
        usloss/libdisk/libdisk3.6.a
        usloss/libdisk/makedisk
        usloss/libdisk/makedisk.c
        usloss/libdisk/makedisk.o
        usloss/libdisk/Makefile
        usloss/libdisk/Makefile.in
        usloss/libuser/libuser.c
        usloss/libuser/libuser.h
        usloss/libuser/libuser.o
        usloss/libuser/libuser3.6.a
        usloss/libuser/Makefile
        usloss/libuser/Makefile.in
        usloss/pterm/Makefile
        usloss/pterm/Makefile.in
        usloss/pterm/pterm
        usloss/pterm/pterm.c
        usloss/pterm/pterm.o
        usloss/src/tests/clock.c
        usloss/src/tests/context0.c
        usloss/src/tests/context1.c
        usloss/src/tests/disk
        usloss/src/tests/interrupt.c
        usloss/src/tests/mmu.c
        usloss/src/tests/mmu2.c
        usloss/src/tests/mmu3.c
        usloss/src/tests/mmu4.c
        usloss/src/tests/psr.c
        usloss/src/tests/psr1.c
        usloss/src/tests/psr2.c
        usloss/src/tests/syscall.c
        usloss/src/tests/syscall2.c
        usloss/src/tests/termread.c
        usloss/src/tests/termwrite.c
        usloss/src/tests/termwritebig.c
        usloss/src/dev_alarm.c
        usloss/src/dev_alarm.h
        usloss/src/dev_alarm.o
        usloss/src/dev_clock.c
        usloss/src/dev_clock.h
        usloss/src/dev_clock.o
        usloss/src/dev_disk.c
        usloss/src/dev_disk.h
        usloss/src/dev_disk.o
        usloss/src/dev_term.c
        usloss/src/dev_term.h
        usloss/src/dev_term.o
        usloss/src/devices.c
        usloss/src/devices.h
        usloss/src/devices.o
        usloss/src/globals.c
        usloss/src/globals.h
        usloss/src/globals.o
        usloss/src/libusloss3.6.a
        usloss/src/main.c
        usloss/src/main.h
        usloss/src/main.o
        usloss/src/Makefile
        usloss/src/Makefile.in
        usloss/src/mmu.c
        usloss/src/mmu.o
        usloss/src/mmuInt.h
        usloss/src/project.h
        usloss/src/sig_ints.c
        usloss/src/sig_ints.h
        usloss/src/sig_ints.o
        usloss/src/syscall.h
        usloss/src/test.py
        usloss/src/usloss.h
        usloss/src/usyscall.h
        usloss/ChangeLog
        usloss/config.h
        usloss/config.h.in
        usloss/config.log
        usloss/config.mk
        usloss/config.mk.in
        usloss/config.status
        usloss/configure
        usloss/configure.ac
        usloss/install-sh
        usloss/Makefile
        usloss/Makefile.in
        usloss/README.md
        usloss/version.mk
        CS452_Fall_2019_Phase_1_3.pdf
        Makefile
        phase1.h
        phase1Int.h)
